# q-learning-collusion

./: .gitignore  pyproject.toml
src/: agent.py  data_processing.py  env.py  experiments.py  train.py
src/Visualizations/: basic_dynamical.py  demand_contours.py  demand_curve_visualization.py  information.py  interactive.py  percentage_vs_mu.py
